help with recording quick start

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -124,7 +124,7 @@ lastMod = false
   copyright = "https://ttsreader.com/blog/2017/05/10/copyright/"
   converters = "https://speechnotes.co/converters/"
   speechlogger = "https://speechlogger.com/"
-  speechninja = "https://speechninja.com/"
+  speechninja = "https://speechninja.co/"
   buttons = "https://buttons-kids.web.app/"
   speechnotes = "https://speechnotes.co/"
   iosApp = "https://apps.apple.com/il/app/simple-text-reader-ttsreader/id1493463248"
