--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,10 +1,10 @@
 # Meta Data for SEO
 
 ## Homepage
-name = "TTSReader Text to Speech"
-title = "TTSReader | Text To Speech. Fast, Free & Unlimited"
+name = "TTSReader 🔊"
+title = "Free Text To Speech Online. Reader & Voice-Over Synthesizer"
 titleSeparator = "-"
-description = "Converts text to speech, so you can listen online & offline to any text, website, PDF file & ebook. Supports mp3 generation for voiceover & commercial use."
+description = "TTSReader converts text to speech. Listen to texts, files, webpages & e-books online, or generate professional mp3 voice-overs with natural sounding AI voices."
 
 
 ## Documentation
