--- a/config/_default/menus/menus.en.toml
+++ b/config/_default/menus/menus.en.toml
@@ -9,8 +9,8 @@
   weight = 11
 
 [[main]]
-  name = "Commercial"
-  url = "/docs/guides/commercial/"
+  name = "Stories"
+  url = "/stories/"
   weight = 12
 
 [[main]]
