added features section to front page

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -2,9 +2,9 @@
 
 ## Homepage
 name = "TTSReader 🔊"
-title = "Free Text To Speech Reader & Synthesizer | TTSReader"
+title = "Text To Speech Reader by TTSReader. Free & Unlimited"
 titleSeparator = "-"
-description = "Input any text, file, book or webpage and TTSReader Text-To-Speech will read it out loud for you. Accurate AI voices, persistence, mp3 exports & more. Try now."
+description = "Listen to any text, PDF, book or webpage online with this free Text To Speech (TTS) Reader online. Keeps text & position. Try others, come back to us."
 
 
 ## Documentation
