better title & translation work start

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -2,9 +2,9 @@
 
 ## Homepage
 name = "TTSReader 🔊"
-title = "Text To Speech Reader by TTSReader. Free & Unlimited"
-titleSeparator = "-"
-description = "Listen to any text, PDF, book or webpage online with this free Text To Speech (TTS) Reader online. Keeps text & position. Try others, come back to us."
+title = "#1 Text To Speech (TTS) Reader Online. Free & Unlimited"
+titleSeparator = "|"
+description = "#1 Text To Speech. Type or upload any text, file, website & book for listening online, proofreading, reading-along or generating professional mp3 voice-overs."
 
 
 ## Documentation
