--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -101,7 +101,7 @@ lastMod = false
   breadCrumb = true
   highLight = true
   kaTex = false
-  multilingualMode = false
+  multilingualMode = true
   docsVersioning = false
   fullWidth = false
   navbarSticky = true
