legacy player link back

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -2,9 +2,9 @@
 
 ## Homepage
 name = "TTSReader"
-title = "Text To Speech Live Player - Not Just a Converter"
+title = "The Real TTSReader - Text To Speech Reader - Free"
 titleSeparator = "|"
-description = "Unlike others, TTSReader delivers engaging text-to-speech — with live-edit, read-along, MP3 export, auto-save and new expressive AI voices. Enjoy listening!"
+description = "Instantly reads out loud text, PDFs, books & websites with natural sounding speech. Works out of the box, just select voice, drop the text and click play."
 
 
 ## Documentation
