--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,8 +1,8 @@
 # Meta Data for SEO
 
 ## Homepage
-name = "TTSReader"
-title = "The Real TTSReader - Text To Speech Reader - Free"
+name = "TTSReader AI"
+title = "TTSReader AI - Free Text To Speech Reader"
 titleSeparator = "|"
 description = "Instantly reads out loud text, PDFs, books & websites with natural sounding speech. Works out of the box, just select voice, drop the text and click play."
 
